find deps in MODULE_PATH options, optional flags
Conflicts:
  CMakeLists.txt
  upstream changes:
   Find libssh2 via pkg-config
    https://github.com/libgit2/libgit2/commit/4f91bfa32b33c729b7370d3da89fa2141faaac9b
   include FindPkgConfig
    https://github.com/libgit2/libgit2/commit/6e1205ef629c3cb18ae06b1ed5c8536725835e11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Mo
 INCLUDE(CheckLibraryExists)
 INCLUDE(AddCFlagIfSupported)
 INCLUDE(FindPkgConfig)
+INCLUDE(flags OPTIONAL)
 
 # Build options
 #
@@ -39,6 +40,12 @@ OPTION( USE_ICONV			"Link with and use iconv library" 		OFF )
 OPTION( USE_SSH				"Link with libssh to enable SSH support" ON )
 OPTION( USE_GSSAPI			"Link with libgssapi for SPNEGO auth"   OFF )
 OPTION( VALGRIND			"Configure build for valgrind"			OFF )
+OPTION( OPENSSL_MODULE_PATH		"Find OpenSSL in CMAKE_MODULE_PATH"			OFF )
+OPTION( ZLIB_MODULE_PATH		"Find zlib in CMAKE_MODULE_PATH"			OFF )
+OPTION( LIBSSH2_MODULE_PATH		"Find libssh2 in CMAKE_MODULE_PATH"			OFF )
+MARK_AS_ADVANCED( OPENSSL_MODULE_PATH )
+MARK_AS_ADVANCED( ZLIB_MODULE_PATH )
+MARK_AS_ADVANCED( LIBSSH2_MODULE_PATH )
 
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	SET( USE_ICONV ON )
@@ -81,8 +88,8 @@ SET(LIBGIT2_PC_LIBS "")
 
 # Installation paths
 #
-SET(BIN_INSTALL_DIR bin CACHE PATH "Where to install binaries to.")
-SET(LIB_INSTALL_DIR lib CACHE PATH "Where to install libraries to.")
+SET(BIN_INSTALL_DIR bin${NUMBITS} CACHE PATH "Where to install binaries to.")
+SET(LIB_INSTALL_DIR lib${NUMBITS} CACHE PATH "Where to install libraries to.")
 SET(INCLUDE_INSTALL_DIR include CACHE PATH "Where to install headers to.")
 
 FUNCTION(TARGET_OS_LIBRARIES target)
@@ -152,7 +159,11 @@ IF (WIN32 AND WINHTTP AND NOT MINGW)
 	FILE(GLOB SRC_HTTP deps/http-parser/*.c deps/http-parser/*.h)
 ELSE ()
 	IF (NOT AMIGA)
-		FIND_PACKAGE(OpenSSL)
+		IF(OPENSSL_MODULE_PATH)
+			FIND_PACKAGE(OpenSSL PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+		ELSE()
+			FIND_PACKAGE(OpenSSL)
+		ENDIF()
 	ENDIF ()
 
 	FIND_PACKAGE(HTTP_Parser)
@@ -196,7 +207,11 @@ IF(WIN32 OR AMIGA OR ANDROID OR CMAKE_SYSTEM_NAME MATCHES "(Solaris|SunOS)")
 ENDIF()
 
 # Optional external dependency: zlib
-FIND_PACKAGE(ZLIB)
+IF(ZLIB_MODULE_PATH)
+	FIND_PACKAGE(ZLIB PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+ELSE()
+	FIND_PACKAGE(ZLIB)
+ENDIF()
 IF (ZLIB_FOUND)
 	INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
 	LINK_LIBRARIES(${ZLIB_LIBRARIES})
@@ -214,7 +229,11 @@ ENDIF()
 
 # Optional external dependency: libssh2
 IF (USE_SSH)
-	PKG_CHECK_MODULES(LIBSSH2 libssh2)
+	IF(LIBSSH2_MODULE_PATH)
+		FIND_PACKAGE(LIBSSH2 PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+	ELSE()
+		PKG_CHECK_MODULES(LIBSSH2 libssh2)
+	ENDIF()
 ENDIF()
 IF (LIBSSH2_FOUND)
 	ADD_DEFINITIONS(-DGIT_SSH)
