--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ IF (WIN32 AND WINHTTP AND NOT MINGW)
 ELSE ()
 	IF (NOT AMIGA)
 		IF(OPENSSL_MODULE_PATH)
-			FIND_PACKAGE(OpenSSL PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+			FIND_PACKAGE(usexp-OpenSSL PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 		ELSE()
 			FIND_PACKAGE(OpenSSL)
 		ENDIF()
@@ -195,7 +195,7 @@ ENDIF()
 
 # Optional external dependency: zlib
 IF(ZLIB_MODULE_PATH)
-	FIND_PACKAGE(ZLIB PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+	FIND_PACKAGE(usexp-ZLIB PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 ELSE()
 	FIND_PACKAGE(ZLIB)
 ENDIF()
@@ -217,7 +217,7 @@ ENDIF()
 # Optional external dependency: libssh2
 IF (USE_SSH)
 	IF(LIBSSH2_MODULE_PATH)
-		FIND_PACKAGE(LIBSSH2 PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+		FIND_PACKAGE(usexp-LIBSSH2 PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 	ELSE()
 		FIND_PACKAGE(LIBSSH2)
 	ENDIF()
