usexp prefix on config.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,7 @@ IF (WIN32 AND WINHTTP AND NOT MINGW)
 ELSE ()
 	IF (NOT AMIGA)
 		IF(OPENSSL_MODULE_PATH)
-			FIND_PACKAGE(OpenSSL PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+			FIND_PACKAGE(usexp-OpenSSL PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 		ELSE()
 			FIND_PACKAGE(OpenSSL)
 		ENDIF()
@@ -210,7 +210,7 @@ ENDIF()
 
 # Optional external dependency: zlib
 IF(ZLIB_MODULE_PATH)
-	FIND_PACKAGE(ZLIB PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+	FIND_PACKAGE(usexp-ZLIB PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 ELSE()
 	FIND_PACKAGE(ZLIB)
 ENDIF()
@@ -232,7 +232,7 @@ ENDIF()
 # Optional external dependency: libssh2
 IF (USE_SSH)
 	IF(LIBSSH2_MODULE_PATH)
-		FIND_PACKAGE(LIBSSH2 PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
+		FIND_PACKAGE(usexp-LIBSSH2 PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
 	ELSE()
 		PKG_CHECK_MODULES(LIBSSH2 libssh2)
 	ENDIF()
