--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -439,7 +439,7 @@ IF (MSVC_IDE)
 ENDIF ()
 
 # Install
-INSTALL(TARGETS git2
+INSTALL(TARGETS git2 EXPORT ${PROJECT_NAME}-targets
 	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
 	LIBRARY DESTINATION ${LIB_INSTALL_DIR}
 	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
@@ -447,6 +447,8 @@ INSTALL(TARGETS git2
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libgit2.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig )
 INSTALL(DIRECTORY include/git2 DESTINATION ${INCLUDE_INSTALL_DIR} )
 INSTALL(FILES include/git2.h DESTINATION ${INCLUDE_INSTALL_DIR} )
+INSTALL(FILES cmake/Modules/usexp-${PROJECT_NAME}-config.cmake DESTINATION share/cmake)
+INSTALL(EXPORT ${PROJECT_NAME}-targets DESTINATION ${LIB_INSTALL_DIR}/cmake)
 
 # Tests
 IF (BUILD_CLAR)
